| Summary: | ASTERISK-27143: bridge_softmix / res_rtp_asterisk: Fix packet loss and renegotiation issues. | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2017-07-18 13:02:44 | Date Closed: | 2017-07-26 11:41:04 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Bridges/bridge_softmix Resources/res_pjsip_session Resources/res_rtp_asterisk |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | I like better packet loss handling. | ||
| Comments: | |||